grammar.js
    source_file: ($) =>
      optional(seq(commaSepSemi($), optional(";"))),

    _statement: ($) =>
      choice(
        $.query,
        $.create_schema,
        $.drop_schema,
        $.create_graph,
        $.drop_graph,
        $.create_graph_type,
        $.drop_graph_type,
      ),

    // Queries.

    // A write may end without projecting anything and a read may not,
    // which is the engine's rule and the reason RETURN is not simply
    // optional here. Which clauses are writes is a question about
    // meaning rather than shape, so this asks the weaker question a
    // grammar can ask: a statement is clauses, and it either ends in a
    // result statement or ends. FINISH is the other result statement:
    // it says the query has no result, so nothing may follow it and
    // nothing may read from it, which is where a RETURN stands too.
    query: ($) =>
      seq(
        optional($.use_clause),
        choice(
          seq(repeat($._reading_clause), choice($.return_clause, $.finish_clause)),
          repeat1($._reading_clause),
        ),
      ),

    _reading_clause: ($) =>
      choice(
        $.match_clause,
        $.insert_clause,
        $.set_clause,
        $.remove_clause,
        $.delete_clause,
        $.call_clause,
        $.unwind_clause,
        $.let_clause,
        $.filter_clause,
        $.with_clause,
        $.order_by_and_page,
      ),

    match_clause: ($) =>
      seq(
        optional(kw("OPTIONAL")),
        kw("MATCH"),
        optional($.match_mode),
        $.pattern,
        optional($.keep_clause),
        optional($.where_clause),
      ),

    // ISO 16.9, features G002 and G003. A match mode speaks about the
    // whole list of patterns where a path mode speaks about one path of
    // it: DIFFERENT EDGES, which is what a list naming none means, says
    // that no one edge answers two of the edge patterns of the list, and
    // REPEATABLE ELEMENTS lifts that. The singular noun and the BINDINGS
    // behind it are spellings of the same mode.
    return_clause: ($) => seq(kw("RETURN"), $.projection),

    where_clause: ($) => seq(kw("WHERE"), $._expression),

    // The tail is greedy: where a projection could end and an order by
    // and page statement could begin, the words belong to the
    // projection. That is the engine's reading, and it is why the
    // statement form below is only ever what is left over.
    projection: ($) =>
      prec.right(
        seq(
          optional(kw("DISTINCT")),
          choice("*", $.projection_item),
          repeat(seq(",", $.projection_item)),
          optional($.order_by),
          optional($.page_offset),
          optional($.page_limit),
        ),
      ),

    // The same three parts standing where a statement stands, which is
    // the standard's order by and page statement. Each part is a whole
    // statement on its own, so the choice is written out rather than
    // built from three optionals: a rule that matches the empty string
    // is one tree-sitter refuses, and it would make every clause
    // boundary a place this rule could be.
    // It is greedy for the same reason the projection is: `SKIP 1
    // LIMIT 2` is one statement that takes a window, and not a
    // statement that skips followed by a statement that limits.
    projection_item: ($) => seq($._expression, optional(seq(kw("AS"), field("alias", $._name)))),

    pattern: ($) => commaSep1($.path),

    path: ($) =>
      seq(
        optional(seq(field("name", $._name), "=")),
        optional($.path_prefix),
        $._path_body,
      ),

    _path_body: ($) =>
      seq($._factor, repeat(choice(seq($.relationship, $._factor), $._factor))),

    node: ($) =>
      seq(
        "(",
        optional(field("name", $._name)),
        repeat(seq(":", $.label_expr)),
        optional($.property_map),
        optional(seq(kw("WHERE"), $._expression)),
        ")",
      ),

    label_expr: ($) => seq($._label_term, repeat(seq("|", $._label_term))),

    _label_term: ($) => seq($._label_factor, repeat(seq("&", $._label_factor))),

    label: ($) => $._name,

    // The seven edge patterns of ISO 18.9 as one production. Both bars
    // are the same character and a tilde takes no arrowhead, which are
    // rules the engine applies after parsing rather than in it.
    relationship: ($) =>
      seq(
        optional("<"),
        $._bar,
        optional(seq(optional($.rel_detail), $._bar)),
        optional(">"),
        optional($.quantifier),
      ),

    // The graph pattern quantifier of ISO 16.10, which says what a hop
    // range inside the brackets says and is the form the standard's own
    // examples are written in.
    _bar: ($) => choice("-", "~"),

    rel_detail: ($) =>
      seq(
        "[",
        optional(field("name", $._name)),
        optional(seq(":", $.label, repeat(seq("|", $.label)))),
        optional(seq("*", optional($.hop_range))),
        optional($.property_map),
        optional(seq(kw("WHERE"), $._expression)),
        "]",
      ),

    property_map: ($) =>
      seq("{", optional(commaSep1(seq(field("key", $._name), ":", $._expression))), "}"),

    // Expressions, loosest binding first.

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.is_expression,
        $.property_access,
        $._primary,
      ),

    binary_expression: ($) =>
      choice(
        prec.left(1, seq($._expression, kw("OR"), $._expression)),
        prec.left(2, seq($._expression, kw("XOR"), $._expression)),
        prec.left(3, seq($._expression, kw("AND"), $._expression)),
        prec.left(
          5,
          seq(
            $._expression,
            choice(
              "=",
              "<>",
              "<",
              "<=",
              ">",
              ">=",
              kw("IN"),
              seq(kw("STARTS"), kw("WITH")),
              seq(kw("ENDS"), kw("WITH")),
              kw("CONTAINS"),
            ),
            $._expression,
          ),
        ),
        // ISO 20.23. Concatenation binds tighter than a comparison and
        // looser than an addition, which is where the standard puts it.
        prec.left(6, seq($._expression, "||", $._expression)),
        prec.left(7, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(8, seq($._expression, choice("*", "/", "%"), $._expression)),
      ),

    unary_expression: ($) =>
      choice(
        prec.right(4, seq(kw("NOT"), $._expression)),
        prec.right(9, seq(choice("-", "+"), $._expression)),
      ),

    is_expression: ($) =>
      prec.left(
        5,
        seq(
          $._expression,
          kw("IS"),
          optional(kw("NOT")),
          // The word behind IS is what tells the five readings
          // apart: the null test, the type test, and the three
          // pattern predicates (G110, G111, G112).
          choice(
            kw("NULL"),
            seq(kw("TYPED"), $.value_type),
            kw("DIRECTED"),
            seq(kw("LABELED"), $.label_expr),
            seq(choice(kw("SOURCE"), kw("DESTINATION")), kw("OF"), $._expression),
          ),
        ),
      ),

    property_access: ($) => prec.left(9, seq($._expression, ".", field("property", $._name))),

    variable: ($) => $._name,

    // A name with a bracket after it. `PATH` is a name until a bracket
    // follows it, the same way `DATE` is a name until a string does, so
    // which name may stand here is a question for the binder and not
    // for the shape of the text.
    path_constructor: ($) =>
      prec(2, seq(field("name", $.identifier), "[", optional(commaSep1($._expression)), "]")),

    // GE03. A name that stands for a value for the length of one
    // expression, ISO 20.7, which is the LET clause said in a smaller
    // place. The `IN` closes the definitions rather than testing
    // membership, which is the engine's reading too: a test written at
    // the top of a definition goes in parentheses.
    let_expression: ($) =>
      prec(
        6,
        seq(
          field("word", $.identifier),
          commaSep1($.let_expression_item),
          kw("IN"),
          field("body", $._expression),
          kw("END"),
        ),
      ),

    // The definition ends at the `IN`, which is what the precedence
    // says: the word is also a comparison operator and a definition
    // holds a whole expression, so the two readings collide and this
    // is the one taken. A membership test written at the top of a
    // definition goes in parentheses, and the engine reads it the same
    // way.
    let_expression_item: ($) => prec(6, seq(field("name", $._name), "=", $._expression)),

    // GE01. A graph written where a value goes, ISO 19.6. The four
    // words are whole references on their own, so nothing follows them
    // and nothing else can be read out of them, which is why they are
    // spelled as keywords here.
    //
    // A graph named rather than referred to is written as the path it
    // is at, and the path is the whole of it. A `USE` also takes the
    // name on its own and takes `GRAPH` in front of it, and neither of
    // those can stand in an expression: a bare name is a variable, and
    // a word with a path behind it is a division as often as it is a
    // graph, since `graph / n` is one and `graph /n` is the other and
    // no reader can see the difference.
    graph_reference: ($) =>
      choice(
        kw("CURRENT_PROPERTY_GRAPH"),
        kw("CURRENT_GRAPH"),
        kw("HOME_PROPERTY_GRAPH"),
        kw("HOME_GRAPH"),
        $.graph_path,
      ),

    // The path takes every segment somebody wrote, which is what
    // `prec.right` is saying: `/a/b` is one graph in one schema and
    // not a graph divided by a name, and the engine's parser reads it
    // the same way, by taking segments for as long as slashes follow.
    graph_path: ($) => prec.right(seq("/", repeat(seq($._name, "/")), $._name)),

    // GE01 and GE02, the reference a caller passed in. `GRAPH $g` and
    // `BINDING TABLE $t` say which of the two reference types the
    // parameter is expected to hold and nothing else, the way
    // `USE GRAPH $g` says nothing `USE $g` does not. The `$` behind
    // the words is what makes them readable here.
    reference_parameter: ($) =>
      seq(optional($.identifier), field("name", $.identifier), $.parameter),

    // A match written where a predicate goes. The bracket is what
    // tells it apart from a variable called exists.
    //
    // ISO 19.4 writes three things here: a pattern, a block of match
    // statements, and a whole query. Braces hold any of the three and
    // parentheses hold the first two, a query written in parentheses
    // not being one of the shapes the standard offers. A pattern with
    // no MATCH in front of it is what keeps the first apart from the
    // third, since a query is clauses and a clause begins with a word.
    // The parenthesized form reads like a call for as long as a call
    // and a pattern read alike, which is why it is the one conflict
    // this grammar declares and why it carries a dynamic precedence
    // below the call's: what follows the bracket settles it, and where
    // both still stand at the end the call wins, since a name with a
    // parenthesis behind it is a call almost every time it is written.
    exists_block: ($) =>
      choice(
        prec(
          2,
          seq(field("name", $.identifier), "{", choice($.query, $._exists_pattern), "}"),
        ),
        prec.dynamic(
          -1,
          seq(
            field("name", $.identifier),
            "(",
            choice(repeat1($.match_clause), $._exists_pattern),
            ")",
          ),
        ),
      ),

    _exists_pattern: ($) =>
      seq(
        optional($.match_mode),
        $.pattern,
        optional($.keep_clause),
        optional($.where_clause),
      ),

    function_call: ($) =>
      prec(
        2,
        seq(
          field("name", $._name),
          "(",
          optional(kw("DISTINCT")),
          optional(choice("*", commaSep1($._expression))),
          ")",
        ),
      ),

    cast: ($) => seq(kw("CAST"), "(", $._expression, kw("AS"), $.value_type, ")"),

    // GE01. The value before the first WHEN is what tells the simple
    // form from the searched one, and there is nothing to choose
    // between them here: one expression stands where the other does
    // not.
    case_expression: ($) =>
      seq(
        kw("CASE"),
        optional($._expression),
        repeat1(seq(kw("WHEN"), $._expression, kw("THEN"), $._expression)),
        optional(seq(kw("ELSE"), $._expression)),
        kw("END"),
      ),

    // The two case abbreviations. They are written exactly as a call is
    // written and have a rule here for the reason CAST does, which is
    // that the engine reads them as forms rather than as functions. It
    // is also what keeps NULLIF one word: the lexer prefers a keyword
    // to an identifier of the same length, so without the spelling the
    // NULL nobody wrote would be read out of the front of it.
    case_abbreviation: ($) =>
      seq(choice(kw("COALESCE"), kw("NULLIF")), "(", commaSep1($._expression), ")"),

    list: ($) => seq("[", optional(commaSep1($._expression)), "]"),

    // ISO 20.19 lets the record name the type it is building, the way
    // 20.17 lets a list name its own. The list side of that needs no
    // rule of its own: `LIST [1, 2]` is a name with a bracket after
    // it, which is what `path_constructor` above already is.
    //
    // The name is written as an identifier and not as the keyword for
    // the reason it is there: it is a name until a brace follows it,
    // and spelling it as a keyword would take `record` away from every
    // query that binds a variable of that name.
    record: ($) => seq(optional(field("name", $.identifier)), $.property_map),

    // Value types.

    value_type: ($) =>
      seq(
        $._type_component,
        repeat(seq("|", $._type_component)),
        optional(seq(kw("NOT"), kw("NULL"))),
      ),

    _type_component: ($) =>
      choice(
        seq(
          kw("ANY"),
          optional(
            choice(kw("VALUE"), kw("RECORD"), kw("GRAPH"), seq(kw("PROPERTY"), kw("VALUE"))),
          ),
        ),
        seq(kw("RECORD"), optional($.record_fields)),
        $.list_type,
        seq(
          $.type_name,
          optional(seq("(", commaSep1($.integer), ")")),
          optional(seq($.list_name, optional(seq("(", $.integer, ")")))),
        ),
      ),

    // Right associative because `IS TYPED LIST < INT >` and a list type
    // followed by a comparison are the same three tokens, and the
    // engine reads the angle bracket as the element type it opens.
    list_type: ($) =>
      prec.right(
        seq(
          $.list_name,
          optional(seq("<", $.value_type, ">")),
          optional(seq("(", $.integer, ")")),
        ),
      ),

    list_name: ($) => seq(optional(kw("GROUP")), choice(kw("LIST"), kw("ARRAY"))),

    type_name: ($) => prec.right(seq($.identifier, optional($.identifier))),

    // Catalog statements.

    _name: ($) => choice($.identifier, $.quoted_identifier),

    identifier: ($) => /[A-Za-z_][A-Za-z0-9_]*/,

    // A delimited name is quoted the way a string is (ISO 21.3): the
    // accent may be doubled to mean itself, the escapes are the same
    // escapes, and an `@` in front turns them off.
    quoted_identifier: ($) =>
      token(
        choice(
          seq("`", repeat(choice(/[^`\\]/, /\\./, "``")), "`"),
          seq("@`", repeat(choice(/[^`]/, "``")), "`"),
        ),
      ),

    parameter: ($) => /\$[A-Za-z0-9_]+/,

    integer: ($) =>
      token(
        choice(
          /[0-9](_?[0-9])*[Mm]?/,
          /0[xX](_?[0-9a-fA-F])+/,
          /0[oO](_?[0-7])+/,
          /0[bB](_?[01])+/,
        ),
      ),
